--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -37,6 +37,7 @@
           <div class="home-text">
             <span>Now Playing</span>
             <h1>The Batman</h1>
+            <a href="#" class="btn">Synopsis</a>
           </div>
         </div>
 
@@ -45,6 +46,7 @@
           <div class="home-text">
             <span>Now Playing</span>
             <h1>Joker</h1>
+            <a href="#" class="btn">Synopsis</a>
           </div>
         </div>
 
@@ -53,6 +55,7 @@
           <div class="home-text">
             <span>Now Playing</span>
             <h1>Man of Steel</h1>
+            <a href="#" class="btn">Synopsis</a>
           </div>
         </div>
       </div>
